@@ -469,6 +469,7 @@ static FunctionMapping fmap[] = {
 int
 main(int argc, char **argv)
 {
+  register_imagelib(appimglib_imagelib);
   init_ace(argc, argv, fmap);
   init_table(TW, TH);
   table_loop();
