@@ -38,7 +38,7 @@ built-in layouts.</p>
 <img align=center src=taipedit-bs> Layers that are shown but not editable. </p>
 
 <p>Tiles:<br>
-<img align=center src=t/n1> . . . <img align=center src=t/n8>
+<img align=center src=n1> . . . <img align=center src=n8>
 Tiles are numbered according to the layer they're on</p>
 
 <p>You'll also see a count of the number of tiles above the layer
